✏️ fix main-menu z-index value name

--- a/styles/components/main-menu.scss
+++ b/styles/components/main-menu.scss
@@ -5,7 +5,7 @@ header .main-menu{
   position: absolute;
   bottom: 0;
   right: 0;
-  z-index: $header-main-menu;
+  z-index: $header-main-menu-z-index;
 
   .item{
 
